--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,10 +7,13 @@
 		<meta name="author" content=""/>
 		<title>PORTFOLIO</title>
 		<!-- Favicon-->
+
 		<link
 		rel="icon" type="image/x-icon" href="assets/favicon.ico"/>
 		<!-- Font Awesome icons (free version)-->
+
 		<script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+		
 		<!-- Google fonts-->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"/>
 		<link
@@ -34,7 +37,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ms-auto">
 						<li class="nav-item mx-0 mx-lg-1">
-							<a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a>
+							<a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ path('portfolio') }}">Portfolio</a>
 						</li>
 						<li class="nav-item mx-0 mx-lg-1">
 							<a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a>
@@ -94,8 +97,11 @@
 				<h1 class="masthead-heading text-uppercase mb-0">Welcome
 					{% if  app.user%}
 						<i class="text-dark">{{app.user.username}}</i>
+						to Your PORTFOLIO
+					{% else %}
+					to my protfolio
 					{% endif %}
-					to My PORTFOLIO</h1>
+					 </h1>
 				<!-- Icon Divider-->
 
 				<div class="divider-custom divider-light">
@@ -109,6 +115,32 @@
 
 				<!-- Masthead Subheading-->
 				<p class="masthead-subheading font-weight-light mb-0">Developpement Web | Mobile</p>
+				
+
+<p align="center">
+  <!-- For more icons please follow  https://github.com/MikeCodesDotNET/ColoredBadges -->
+  <img src="https://raw.githubusercontent.com/8bithemant/8bithemant/master/svg/dev/languages/html.svg" alt="html" style="vertical-align:top; margin:4px">    
+      <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/languages/css3.svg" alt="css3" style="vertical-align:top; margin:6px 4px">
+  <img src="https://raw.githubusercontent.com/8bithemant/8bithemant/master/svg/dev/languages/csharp.svg" alt="csharp" style="vertical-align:top; margin:4px">
+  <img src="https://raw.githubusercontent.com/8bithemant/8bithemant/master/svg/dev/languages/python.svg" alt="python" style="vertical-align:top; margin:4px">
+  <img src="https://raw.githubusercontent.com/8bithemant/8bithemant/master/svg/dev/frameworks/react.svg" alt="react" style="vertical-align:top; margin:4px">
+    <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/frameworks/angular.svg" alt="angular" style="vertical-align:top; margin:4px">
+        <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/frameworks/bootstrap.svg" alt="bootstrap" style="vertical-align:top; margin:6px 4px">
+    <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/frameworks/nodejs.svg" alt="nodejs" style="vertical-align:top; margin:6px 4px">
+    <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/languages/java.svg" alt="java" style="vertical-align:top; margin:6px 4px">
+    <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/languages/php.svg" alt="php" style="vertical-align:top; margin:6px 4px">
+   <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/frameworks/jquery.svg" alt="php" style="vertical-align:top; margin:6px 4px">
+  <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/languages/js.svg" alt="php" style="vertical-align:top; margin:6px 4px">
+  <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/tools/eclipse.svg" alt="php" style="vertical-align:top; margin:6px 4px">
+  <img src="https://raw.githubusercontent.com/8bithemant/8bithemant/master/svg/dev/tools/visualstudio_code.svg" alt="vscode" style="vertical-align:top; margin:6px 4px">
+  <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/tools/visualstudio.svg" alt="php" style="vertical-align:top; margin:6px 4px">
+ <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/tools/bash.svg" alt="php" style="vertical-align:top; margin:6px 4px">
+    <img src="https://raw.githubusercontent.com/MikeCodesDotNET/ColoredBadges/4a38660afb7be89a6032218589b4454a1285c7f8/svg/dev/services/npm.svg" alt="npm" style="vertical-align:top; margin:6px 4px">
+
+</p>
+
+
+				{# end here #}
 			</div>
 		</header>
 
@@ -137,18 +169,38 @@
 					<!-- About Section Content-->
 					<div class="row">
 						<div class="col-lg-4 ms-auto">
-							<p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+							<p class="lead">
+Étudiant à l’école d’ingénieur, en 5éme année Génie logiciel, ou j’ai travaillé sur plusieurs projets avec divers technologies.							
+Je suis sur le point de changement de carriér vers le developpement web aprés une expérience de plus de 5ans en tant que commercial au sein d'un opérateur téléphonique 
+							</p>
 						</div>
 						<div class="col-lg-4 me-auto">
-							<p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+							<p class="lead">
+
+COMPÉTENCES:
+<br>
+PHP - Java - C# - Javascript - JQuery - HTML5 - CSS3 
+<br>
+
+Frameworks : Symfony - Angular - React - Bootstrap - Nodejs
+<br>
+
+Base de donnée : MySQL, Doctrine, MongoDb
+<br>
+
+Versionning : Git							
+							</p>
 						</div>
 					</div>
 					<!-- About Section Button-->
 					<div class="text-center mt-4">
-						<a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
-							<i class="fas fa-download me-2"></i>
-							Free Download!
+						<a class="btn btn-xl btn-outline-light" href="https://www.linkedin.com/in/rami-riahi-988197118/" target="_blank">
+							Linkedin
 						</a>
+						<a class="btn btn-xl btn-outline-dark" href="https://github.com/riahirami/" target="_blank">
+							Github
+						</a>
+						
 					</div>
 				</div>
 			</section>
