--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -39,7 +39,7 @@
 								<p>{{i.nom}}</p>
 							</a>
 							<p>{{i.description}}</p>
-							<p>
+							<p class="badge bg-primary">
 								{{i.statut}}
 							</p>
 
