--- a/templates/portfolio/listProject.html.twig
+++ b/templates/portfolio/listProject.html.twig
@@ -34,8 +34,7 @@
 
 							<p>{{i.nom}}</p>
 							<p>{{i.description}}</p>
-							<p>{{i.statut}}
-							</p>
+							<p class="badge bg-warning">{{i.statut}}							</p>
 
 						</p>
 
