--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
 
 		<nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
 			<div class="container">
-				<a class="navbar-brand" href="#page-top">My Portfolio</a>
+				<a class="navbar-brand" href="{{ path('portfolio') }}">My Portfolio</a>
 				<button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 					Menu
 					<i class="fas fa-bars"></i>
@@ -37,7 +37,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ms-auto">
 						<li class="nav-item mx-0 mx-lg-1">
-							<a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ path('portfolio') }}">Portfolio</a>
+							<a class="nav-link py-3 px-0 px-lg-3 rounded" href=" #portfolio">Portfolio</a>
 						</li>
 						<li class="nav-item mx-0 mx-lg-1">
 							<a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a>
@@ -60,14 +60,14 @@
 									Dashboard</a>
 							</li>
 						{% else %}
-							<li class="nav-item mx-0 mx-lg-1">
+							{# <li class="nav-item mx-0 mx-lg-1">
 
-								<a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ path('security_login') }}">Log-in</a>
-							</li>
-							<li class="nav-item mx-0 mx-lg-1">
+								<a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ path('security_login') }}">Login</a>
+							</li> #}
+							{# <li class="nav-item mx-0 mx-lg-1">
 
 								<a class="nav-link py-3 px-0 px-lg-3 rounded" href="{{ path('security_registration') }}">Inscription</a>
-							</li>
+							</li> #}
 						{% endif %}
 
 
@@ -102,16 +102,26 @@
 					to my protfolio
 					{% endif %}
 					 </h1>
+
 				<!-- Icon Divider-->
 
 				<div class="divider-custom divider-light">
 					<div class="divider-custom-line"></div>
 					<div class="divider-custom-icon">
 						<i class="fas fa-star"></i>
+
 					</div>
 					<div class="divider-custom-line"></div>
 				</div>
+											 <h1 class="masthead-heading text-uppercase mb-0">	Riahi Rami </h1>
+<div class="divider-custom divider-light">
+					<div class="divider-custom-line"></div>
+					<div class="divider-custom-icon">
+						<i class="fas fa-star"></i>
 
+					</div>
+					<div class="divider-custom-line"></div>
+				</div>
 
 				<!-- Masthead Subheading-->
 				<p class="masthead-subheading font-weight-light mb-0">Developpement Web | Mobile</p>
@@ -152,7 +162,11 @@
 
 		{% block body %}{% endblock %}
 		<!-- Portfolio Section-->
+		<div id="portfolio">
+
 		{%  block sportfolio %}{% endblock %}
+
+		</div>
 		<!-- About Section-->
 		{% block section_about %}
 
