--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -87,7 +87,7 @@
 				{% block inscri %}{% endblock %}
 
 				<img
-				class="masthead-avatar mb-5" src="{{asset('assets/img/avataaars.svg')}}" alt="..."/>
+				class="masthead-avatar mb-5" src="{{asset('assets/img/Capture.png')}}" alt="..."/>
 				<!-- Masthead Heading-->
 
 
@@ -248,51 +248,41 @@ Versionning : Git
 							<!-- To make this form functional, sign up at-->
 							<!-- https://startbootstrap.com/solution/contact-forms-->
 							<!-- to get an API token!-->
-								<form
-								id="contactForm" data-sb-form-api-token="API_TOKEN"> <!-- Name input-->
-								<div class="form-floating mb-3">
-									<input class="form-control" id="name" type="text" placeholder="Enter your name..." data-sb-validations="required"/>
-									<label for="name">Full name</label>
-									<div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+						{{ form_start(form) }}
+
+							
+								<div class="form-floatin mb-3">
+				{{ form_label(form.utilisateur) }}
+				{{ form_widget(form.utilisateur , { 'attr': { 'placeholder': '...' ,'class': 'form-control'} } ) }}
 								</div>
 								<!-- Email address input-->
-								<div class="form-floating mb-3">
-									<input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email"/>
-									<label for="email">Email address</label>
-									<div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
-									<div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+								<div class="form-floatin mb-3">
+													{{ form_label(form.email) }}
+				{{ form_widget(form.email , { 'attr': { 'placeholder': '...' ,'class': 'form-control'} } ) }}
+
 								</div>
 								<!-- Phone number input-->
-								<div class="form-floating mb-3">
-									<input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required"/>
-									<label for="phone">Phone number</label>
-									<div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+								<div class="form-floatin mb-3">
+													{{ form_label(form.telephone) }}
+				{{ form_widget(form.telephone , { 'attr': { 'placeholder': '...' ,'class': 'form-control'} } ) }}
 								</div>
 								<!-- Message input-->
-								<div class="form-floating mb-3">
-									<textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-									<label for="message">Message</label>
-									<div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+								<div class="form-floatin mb-3">
+													{{ form_label(form.message) }}
+				{{ form_widget(form.message , { 'attr': { 'placeholder': '...' ,'class': 'form-control'} } ) }}
 								</div>
-								<!-- Submit success message-->
-								<!---->
-								<!-- This is what your users will see when the form-->
-								<!-- has successfully submitted-->
-									<div class="d-none" id="submitSuccessMessage"> <div class="text-center mb-3">
-										<div class="fw-bolder">Form submission successful!</div>
-										To activate this form, sign up at
-										<br/>
-										<a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-									</div>
-								</div>
-								<!-- Submit error message-->
-								<!---->
-								<!-- This is what your users will see when there is-->
-								<!-- an error submitting the form-->
+								
 									<div class="d-none" id="submitErrorMessage"> <div class="text-center text-danger mb-3">Error sending message!</div>
 								</div>
 								<!-- Submit Button-->
-								<button class="btn btn-primary btn-xl disabled" id="submitButton" type="submit">Send</button>
+								<div class="d-grid gap-2 ">
+
+								<button class="btn btn-primary  ">{{ button_label|default('Envoyer') }}</button>
+</div>
+{{ form_end(form) }}
+						
+
+
 							</form>
 						</div>
 					</div>
