--- a/templates/portfolio/listProject.html.twig
+++ b/templates/portfolio/listProject.html.twig
@@ -36,14 +36,14 @@
 							<p>{{i.description}}</p>
 							<p class="badge bg-warning">{{i.statut}}							</p>
 
-						</p>
+						<p >technologies 	{{i.technologies}} </p>
 
 
 					</div>
 
 					{% if  'ROLE_ADMIN' %}
-						<a href="{{ path("editerProjet",{'id':i.id}) }}">modifier</a>
-						<a href="{{ path("supprimer",{'id':i.id}) }}">supprimer</a>
+						<a class="btn btn-primary" href="{{ path("editerProjet",{'id':i.id}) }}">modifier</a>
+						<a class="btn btn-danger" href="{{ path("supprimer",{'id':i.id}) }}">supprimer</a>
 					{% endif %}
 
 				</div>
