--- a/templates/admin/edit.html.twig
+++ b/templates/admin/edit.html.twig
@@ -9,18 +9,39 @@
 
 
 		{{form_start(form)}}
-		{{form_widget(form)}}
+		
+			<div class="form-group">
+				{{ form_label(form.nom) }}
+				{{ form_widget(form.nom , { 'attr': { 'placeholder': 'nom du projet...' ,'class': 'form-control'} } ) }}
+			</div>
+			<div class="form-group">
+				{{ form_label(form.description) }}
+				{{ form_widget(form.description, { 'attr': { 'placeholder': 'description du projet...','class': 'form-control' } } ) }}
+			</div>
+			<div class="form-group">
+				{{ form_label(form.image) }}
+				{{ form_widget(form.image, { 'attr': { 'placeholder': 'image...' ,'class': 'form-control'} } ) }}
+			</div>			
+			<div class="form-group">
+				{{ form_label(form.date_creation) }}
+				{{ form_widget(form.date_creation, { 'attr': { 'placeholder': 'date creation...','class': 'form-control' } } ) }}
+			</div>
+			<div class="form-group">
+				{{ form_label(form.statut) }}
+				{{ form_widget(form.statut, { 'attr': { 'placeholder': 'statut...','class': 'form-control' } } ) }}
+			</div>
+ 			 <div class="form-group ">
+				{{ form_label(form.technologies) }}
 
-		{#	{% for i in usr %}
-													<p>{{i.username}}</p>
-													<p>{{i.email}}</p>
-											
-											
-													<hr>
-											
-												{% endfor %}
-												#}
-
+				{{ form_widget(form.technologies, { 'attr': { 'placeholder': 'technologies...','class': 'form-control' } } ) }}
+			</div>
+			<div class="form-group">
+				{{ form_label(form.lien_github) }}
+				{{ form_widget(form.lien_github, { 'attr': { 'placeholder': 'lien...','class': 'form-control' } } ) }}
+			</div>
+			<div class="">
+			<button type="submit" class="btn btn-dark btn-block">Valider</button>
+			</div>
 
 		<button class="btn btn-success" type="submit">editer
 		</button>
