--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -87,7 +87,7 @@
 				{% block inscri %}{% endblock %}
 
 				<img
-				class="masthead-avatar mb-5" src="{{asset('assets/img/me.png')}}" alt="..."/>
+				class="masthead-avatar mb-5" src="https://i.postimg.cc/PrjsjGg2/me.png" alt="..."/>
 				<!-- Masthead Heading-->
 
 
