--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -216,7 +216,7 @@ Versionning : Git
 	Linkedin
 						</a>
 						<a class="btn btn-xl btn-outline-dark" href="https://github.com/riahirami/" target="_blank">
-						<i class="fab fa-fw fa-github"></i>	Github
+						<i class="fab fa-fw fa-git"></i>	Github
 						</a>
 						
 					</div>
@@ -308,7 +308,7 @@ Versionning : Git
 					
 						</p>
 						<a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://github.com/riahirami">
-							<i class="fab fa-fw fa-git"></i>
+							<i class="fab fa-fw fa-github"></i>
 						</a>
 						<a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.linkedin.com/in/rami-riahi-988197118/">
 							<i class="fab fa-fw fa-linkedin-in"></i>
