footer done / github icon

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -216,7 +216,7 @@ Versionning : Git
 	Linkedin
 						</a>
 						<a class="btn btn-xl btn-outline-dark" href="https://github.com/riahirami/" target="_blank">
-						<i class="fab fa-fw fa-git"></i>	Github
+						<i class="fab fa-fw fa-github"></i>	Github
 						</a>
 						
 					</div>
